Updated website texts to add information regarding zip import feature.

--- a/index-it.html
+++ b/index-it.html
@@ -330,17 +330,16 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Windows</h3>
-              <p>Run the installer and install to desired location, then start Valkyrie. The import might take a minute,
-                so don't be too hasty. If import does not complete or is not working, please check out the <a
-                  href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting" target="_blank">Troubleshooting</a>
-                section.</p>
-              <p>Requires the install of the FGG app related to the boardgame you want to play:</p>
+              <p>Eseguire il programma di installazione e installare nella posizione desiderata, quindi avviare
+                Valkyrie.</p>
+              <p>È possibile importare i dati utilizzando uno dei due metodi seguenti:</p>
               <ul>
-                <li>Mansions of Madness Second Edition requires the <a href="http://store.steampowered.com/app/478980/"
-                    target="_blank">Mansions of Madness</a> app.</li>
-                <li>Descent: Journeys in the Dark (Second Edition) requires the <a
-                    href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Road to Legend</a> app.
-                </li>
+                <li><b>Importa da app ufficiale</b>: Consente di importare direttamente dalle applicazioni ufficiali <a
+                    href="http://store.steampowered.com/app/478980/" target="_blank">Case della Follia</a> o <a
+                    href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Road to Legend</a>.</li>
+                <li><b>Importa da ZIP</b>: Consente di importare da un file zip scaricato. Il file zip deve essere
+                  scaricato dagli URL elencati nella <a href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import"
+                    target="_blank">Guida all'importazione ZIP</a> per il proprio sistema operativo.</li>
               </ul>
 
               <a id="valkyrieWindowsZip" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest
@@ -366,22 +365,27 @@
                     href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a>
                   per i dettagli.</b></p>
               <p>Se avete già installato una versione di Valkyrie, disinstallatela prima.</p>
- <p>Installate l'app ufficiale utilizzando il Google Play Store:</p>
- <ul>
- <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
- target="_blank">Mansions Of Madness Second Edition</a></li>
- <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
- target="_blank">Descent: Road to Legend</a></li>
- </ul>
- <p>1. Avviare l'app ufficiale e attendere il completamento del caricamento (il cursore di attesa all'interno del menu principale
- è scomparso).</p>
- <p>2. Abilitare "Sorgenti sconosciute" in Impostazioni → Sicurezza → Sorgenti sconosciute. Copiare il file APK di Valkyrie all'indirizzo
- del dispositivo.</p>
- <p>3. Eseguire l'APK di Valkyrie per installarlo. Dopo l'installazione, si troverà un'app denominata "Valkyrie" nell'elenco delle applicazioni di
-. </p>
- <p>4. Eseguirla. Consentire tutte le autorizzazioni richieste dall'applicazione.</p>
+              <p>Installate l'app ufficiale utilizzando il Google Play Store:</p>
+              <ul>
+                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
+                    target="_blank">Mansions Of Madness Second Edition</a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
+                    target="_blank">Descent: Road to Legend</a></li>
+              </ul>
+              <p>1. Avviare l'app ufficiale e attendere il completamento del caricamento (il cursore di attesa
+                all'interno del menu principale
+                è scomparso).</p>
+              <p>2. Abilitare "Sorgenti sconosciute" in Impostazioni → Sicurezza → Sorgenti sconosciute. Copiare il file
+                APK di Valkyrie all'indirizzo
+                del dispositivo.</p>
+              <p>3. Eseguire l'APK di Valkyrie per installarlo. Dopo l'installazione, si troverà un'app denominata
+                "Valkyrie" nell'elenco delle applicazioni di
+                . </p>
+              <p>4. Eseguirla. Consentire tutte le autorizzazioni richieste dall'applicazione.</p>
 
-             <p>5. Quindi controllare il <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">manuale di installazione di Android</a>.</p>
+              <p>5. Quindi controllare il <a
+                  href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">manuale di installazione
+                  di Android</a>.</p>
 
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
 
@@ -412,7 +416,14 @@
                 Click Open.</p>
               <p>2. The app is saved as an exception to your security settings, and you can open it in the future by
                 double-clicking it just as you can any registered app.</p>
-              <p>If importing does not complete, please attempt to run Valkyrie at elevated privileges.</p>
+              <p>È possibile importare i dati utilizzando uno dei due metodi seguenti:</p>
+              <ul>
+                <li><b>Importa da app ufficiale</b>: Consente di importare direttamente dalle applicazioni ufficiali.
+                </li>
+                <li><b>Importa da ZIP</b>: Consente di importare da un file zip scaricato. Il file zip deve essere
+                  scaricato dagli URL elencati nella <a href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import"
+                    target="_blank">Guida all'importazione ZIP</a>.</li>
+              </ul>
               <p>Also make sure, you have folder permissions. Move your Valkyrie download to the folder Applications
                 inside the Finder app. Then run chmod +x /Applications/Valkyrie.app/Contents/MacOS/Valkyrie in the
                 Terminal app.</p>
@@ -433,12 +444,17 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Linux</h3>
-              <p>For Linux there is no automatic import either:</p>
-              <p>1. Copy content/&lt;type&gt;/ffg from another imported installation or</p>
-              <p>2. Run with -import &lt;location&gt; where &lt;location&gt; is Road to Legend or Mansions of Madness
-                data.</p>
-              <p>For example /home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend for
-                Road to Legend.</p>
+              <p>Per Linux non c'è importazione automatica:</p>
+              <ul>
+                <li>Puoi eseguire con <code>-import &lt;location&gt;</code> dove <code>&lt;location&gt;</code> sono i
+                  dati di Road to Legend o Mansions of Madness. Ad esempio
+                  <code>/home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend</code> per
+                  Road to Legend.</li>
+                <li>In alternativa puoi usare <b>Importa da ZIP</b>: Consente di importare da un file zip scaricato. Il
+                  file zip deve essere scaricato dagli URL elencati nella <a
+                    href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">Guida all'importazione
+                    ZIP</a>.</li>
+              </ul>
 
               <a id="valkyrieLinux" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
 
@@ -487,16 +503,21 @@
     </div> <!-- end of basic-2 -->
 
     <!-- iOS -->
-     <div id="download-ios" class="basic-3">
+    <div id="download-ios" class="basic-3">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <div class="text-container">
-               <h3>iOS</h3>
- <p>Mentre non forniamo un client a causa dei requisiti forzati dell'App Store di Apple, è possibile eseguire lo streaming di Valkyrie su
- iOS dal PC Windows utilizzando <a href="https://play.google.com/store/apps/details?id=com.valvesoftware.steamlink" target="_blank">Steam Link</a>.
+              <h3>iOS</h3>
+              <p>Mentre non forniamo un client a causa dei requisiti forzati dell'App Store di Apple, è possibile
+                eseguire lo streaming di Valkyrie su
+                iOS dal PC Windows utilizzando <a
+                  href="https://play.google.com/store/apps/details?id=com.valvesoftware.steamlink" target="_blank">Steam
+                  Link</a>.
               </p>
- <p>Per maggiori informazioni consultare il <a href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A">manuale dell'app Steam Link</a></p>
+              <p>Per maggiori informazioni consultare il <a
+                  href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A">manuale dell'app Steam Link</a>
+              </p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
