--- a/index-fr.html
+++ b/index-fr.html
@@ -330,17 +330,21 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Windows</h3>
-              <p>Run the installer and install to desired location, then start Valkyrie. The import might take a minute,
-                so don't be too hasty. If import does not complete or is not working, please check out the <a
-                  href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting" target="_blank">Troubleshooting</a>
-                section.</p>
-              <p>Requires the install of the FGG app related to the boardgame you want to play:</p>
+              <p>Exécutez le programme d'installation et installez Valkyries à l'emplacement souhaité, puis démarrez
+                Valkyrie.</p>
+              <p>Vous pouvez importer des données en utilisant l'une des deux méthodes suivantes :</p>
               <ul>
-                <li>Mansions of Madness Second Edition requires the <a href="http://store.steampowered.com/app/478980/"
-                    target="_blank">Mansions of Madness</a> app.</li>
-                <li>Descent: Journeys in the Dark (Second Edition) requires the <a
-                    href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Road to Legend</a> app.
+                <li><b>Importer depuis l'app officielle</b> : Permet d'importer directement depuis les applications
+                  officielles <a href="http://store.steampowered.com/app/478980/" target="_blank">Les Demeures de
+                    l'Épouvante</a> ou
+                  <a href="http://store.steampowered.com/app/477200/" target="_blank">Descent : La Voie des
+                    Légendes</a>.
                 </li>
+                <li><b>Importer depuis ZIP</b> : Permet d'importer à partir d'un fichier zip téléchargé. Le fichier zip
+                  doit
+                  être téléchargé à partir des URL indiquées dans le <a
+                    href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">Guide d'importation
+                    ZIP</a> spécifique à votre système d'exploitation.</li>
               </ul>
 
               <a id="valkyrieWindowsZip" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest
@@ -381,7 +385,9 @@
                 list of apps. </p>
               <p>4. Run it. Allow all permissions the app requests.</p>
 
-             <p>5. Vérifiez ensuite le <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">manuel d'installation d'Android</a>.</p>
+              <p>5. Vérifiez ensuite le <a
+                  href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">manuel d'installation
+                  d'Android</a>.</p>
 
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
 
@@ -412,7 +418,17 @@
                 Click Open.</p>
               <p>2. The app is saved as an exception to your security settings, and you can open it in the future by
                 double-clicking it just as you can any registered app.</p>
-              <p>If importing does not complete, please attempt to run Valkyrie at elevated privileges.</p>
+              <p>Vous pouvez importer des données en utilisant l'une des deux méthodes suivantes :</p>
+              <ul>
+                <li><b>Importer depuis l'app officielle</b> : Permet d'importer directement depuis les applications
+                  officielles.
+                </li>
+                <li><b>Importer depuis ZIP</b> : Permet d'importer à partir d'un fichier zip téléchargé. Le fichier zip
+                  doit
+                  être téléchargé à partir des URL indiquées dans le <a
+                    href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">Guide d'importation
+                    ZIP</a>.</li>
+              </ul>
               <p>Also make sure, you have folder permissions. Move your Valkyrie download to the folder Applications
                 inside the Finder app. Then run chmod +x /Applications/Valkyrie.app/Contents/MacOS/Valkyrie in the
                 Terminal app.</p>
@@ -433,12 +449,17 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Linux</h3>
-              <p>For Linux there is no automatic import either:</p>
-              <p>1. Copy content/&lt;type&gt;/ffg from another imported installation or</p>
-              <p>2. Run with -import &lt;location&gt; where &lt;location&gt; is Road to Legend or Mansions of Madness
-                data.</p>
-              <p>For example /home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend for
-                Road to Legend.</p>
+              <p>Pour Linux, il n'y a pas d'importation automatique :</p>
+              <ul>
+                <li>Vous pouvez soit exécuter avec <code>-import &lt;location&gt;</code> où
+                  <code>&lt;location&gt;</code> est les données de Road to Legend ou Mansions of Madness. Par exemple
+                  <code>/home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend</code> pour
+                  Road to Legend.</li>
+                <li>Alternativement, vous pouvez utiliser <b>Importer depuis ZIP</b> : Permet d'importer à partir d'un
+                  fichier zip téléchargé. Le fichier zip doit être téléchargé à partir des URL indiquées dans le <a
+                    href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">Guide d'importation
+                    ZIP</a>.</li>
+              </ul>
 
               <a id="valkyrieLinux" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
 
@@ -493,10 +514,15 @@
           <div class="col-lg-12">
             <div class="text-container">
               <h3>iOS</h3>
- <p>Bien que nous ne fournissions pas de client en raison des exigences de l'App Store d'Apple, vous pouvez diffuser Valkyrie sur
- iOS depuis votre PC Windows en utilisant <a href="https://play.google.com/store/apps/details?id=com.valvesoftware.steamlink" target="_blank">Steam Link</a>.
+              <p>Bien que nous ne fournissions pas de client en raison des exigences de l'App Store d'Apple, vous pouvez
+                diffuser Valkyrie sur
+                iOS depuis votre PC Windows en utilisant <a
+                  href="https://play.google.com/store/apps/details?id=com.valvesoftware.steamlink" target="_blank">Steam
+                  Link</a>.
               </p>
- <p>Pour plus d'informations, consultez le <a href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A">Manuel de l'application Steam Link</a></p>
+              <p>Pour plus d'informations, consultez le <a
+                  href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A">Manuel de l'application Steam
+                  Link</a></p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
