--- a/index.html
+++ b/index.html
@@ -331,17 +331,17 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Windows</h3>
-              <p>Run the installer and install to desired location, then start Valkyrie. The import might take a minute,
-                so don't be too hasty. If import does not complete or is not working, please check out the <a
-                  href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting" target="_blank">Troubleshooting</a>
-                section.</p>
-              <p>Requires the install of the FGG app related to the boardgame you want to play:</p>
+              <p>Run the installer and install to desired location, then start Valkyrie.</p>
+              <p>You can import data using one of two methods:</p>
               <ul>
-                <li>Mansions of Madness Second Edition requires the <a href="http://store.steampowered.com/app/478980/"
-                    target="_blank">Mansions of Madness</a> app.</li>
-                <li>Descent: Journeys in the Dark (Second Edition) requires the <a
-                    href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Road to Legend</a> app.
+                <li><b>Import from official app</b>: Allows to import directly from the official <a
+                    href="http://store.steampowered.com/app/478980/" target="_blank">Mansions of Madness</a> or <a
+                    href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Road to Legend</a> apps.
                 </li>
+                <li><b>Import from ZIP</b>: Allows to import from a downloaded zip file. The zip file needs to be
+                  downloaded
+                  from the URLs listed in the <a href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import"
+                    target="_blank">ZIP Import Guide</a> specific to your operating system.</li>
               </ul>
 
               <a id="valkyrieWindowsZip" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest
@@ -364,21 +364,19 @@
             <div class="text-container">
               <h3>Android</h3>
               <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
-              <p>Install the official app using the Google Play Store:</p>
-              <ul>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
-                    target="_blank">Mansions Of Madness Second Edition</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
-                    target="_blank">Descent: Road to Legend</a></li>
-              </ul>
-              <p>1. Start the official app and wait until the loading is complete (the wait cursor inside the main menu
-                is gone).</p>
-              <p>2. Enable "Unknown Sources" under Settings → Security → Unknown Sources. Copy the Valkyrie APK file to
+              <p><b>Note</b>: Import from the official apps is not possible due to Android access restrictions.</p>
+              <p>1. Enable "Unknown Sources" under Settings → Security → Unknown Sources. Copy the Valkyrie APK file to
                 your device.</p>
-              <p>3. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie" in your
+              <p>2. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie" in your
                 list of apps. </p>
-              <p>4. Run it. Allow all permissions the app requests.</p>
-              <p>5. Next check the <a href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android installation manual</a>.</p>
+              <p>3. Run it. Allow all permissions the app requests.</p>
+              <p>4. Use the <b>Import from ZIP</b> button to import content. The zip file needs to be downloaded from
+                the
+                URLs listed in the <a href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">ZIP
+                  Import Guide</a>.</p>
+              <p>In case of issues check <a
+                  href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android installation
+                  manual</a>.</p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
 
             </div> <!-- end of text-container -->
@@ -408,7 +406,14 @@
                 Click Open.</p>
               <p>2. The app is saved as an exception to your security settings, and you can open it in the future by
                 double-clicking it just as you can any registered app.</p>
-              <p>If importing does not complete, please attempt to run Valkyrie at elevated privileges.</p>
+              <p>You can import data using one of two methods:</p>
+              <ul>
+                <li><b>Import from official app</b>: Allows to import directly from the official apps.</li>
+                <li><b>Import from ZIP</b>: Allows to import from a downloaded zip file. The zip file needs to be
+                  downloaded
+                  from the URLs listed in the <a href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import"
+                    target="_blank">ZIP Import Guide</a>.</li>
+              </ul>
               <p>Also make sure, you have folder permissions. Move your Valkyrie download to the folder Applications
                 inside the Finder app. Then run chmod +x /Applications/Valkyrie.app/Contents/MacOS/Valkyrie in the
                 Terminal app.</p>
@@ -429,12 +434,18 @@
           <div class="col-lg-9">
             <div class="text-container">
               <h3>Linux</h3>
-              <p>For Linux there is no automatic import either:</p>
-              <p>1. Copy content/&lt;type&gt;/ffg from another imported installation or</p>
-              <p>2. Run with -import &lt;location&gt; where &lt;location&gt; is Road to Legend or Mansions of Madness
-                data.</p>
-              <p>For example /home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend for
-                Road to Legend.</p>
+
+              <p>For Linux there is no automatic import:</p>
+              <ul>
+                <li>You can either run with <code>-import &lt;location&gt;</code> where <code>&lt;location&gt;</code> is
+                  Road to Legend or Mansions of Madness data. For example
+                  <code>/home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend</code> for
+                  Road to Legend.</li>
+                <li>Alternatively you can use <b>Import from ZIP</b>: Allows to import from a downloaded zip file. The
+                  zip file needs to be downloaded from the URLs listed in the <a
+                    href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">ZIP Import Guide</a>.
+                </li>
+              </ul>
 
               <a id="valkyrieLinux" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
 
@@ -455,9 +466,12 @@
             <div class="text-container">
               <h3>iOS</h3>
               <p>While we don't ship a client due to Apples forced App Store requirements, you can stream Valkyrie to
-                iOS from your Windows PC using <a href="https://play.google.com/store/apps/details?id=com.valvesoftware.steamlink" target="_blank">Steam Link</a>.
+                iOS from your Windows PC using <a
+                  href="https://play.google.com/store/apps/details?id=com.valvesoftware.steamlink" target="_blank">Steam
+                  Link</a>.
               </p>
-              <p>For more information check the <a href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A">Steam Link app manual</a></p>
+              <p>For more information check the <a
+                  href="https://help.steampowered.com/en/faqs/view/4C03-C8BA-3EA1-B26A">Steam Link app manual</a></p>
             </div> <!-- end of text-container -->
           </div> <!-- end of col -->
         </div> <!-- end of row -->
