Added note element.

--- a/index-de.html
+++ b/index-de.html
@@ -367,7 +367,8 @@
               <h3>Android</h3>
 
               <p>Wenn bereits eine andere Version von Valkyrie installiert ist, deinstalliere diese bitte zuerst.</p>
-              <p><b>Hinweis</b>: Der Import aus den offiziellen Apps ist aufgrund von Android-Zugriffsbeschränkungen
+              <p class="custom-alert"><b>Hinweis</b>: Der Import aus den offiziellen Apps ist aufgrund von
+                Android-Zugriffsbeschränkungen
                 nicht möglich.</p>
               <p>1. Aktiviere "Unbekannte Quellen" unter Einstellungen → Sicherheit → Unbekannte Quellen. Kopiere die
                 Valkyrie APK-Datei auf dein Endgerät.</p>
@@ -442,7 +443,8 @@
                 <li>Du kannst entweder mit <code>-import &lt;location&gt;</code> starten, wobei
                   <code>&lt;location&gt;</code> Road to Legend oder Mansions of Madness Daten sind. Zum Beispiel
                   <code>/home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend</code> für
-                  Road to Legend.</li>
+                  Road to Legend.
+                </li>
                 <li>Alternativ kannst du <b>Import aus ZIP</b> verwenden: Ermöglicht den Import aus einer
                   heruntergeladenen ZIP-Datei. Die ZIP-Datei muss von den URLs heruntergeladen werden, die im <a
                     href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">ZIP Import Guide</a>
