--- a/index-es.html
+++ b/index-es.html
@@ -368,7 +368,8 @@
                   href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">solución
                   de problemas</a> para más detalles.</b></p>
               <p>Si ya hay una versión de Valkyrie instalada, por favor desinstálala primero.</p>
-              <p><b>Nota</b>: La importación desde las aplicaciones oficiales no es posible debido a las restricciones
+              <p class="custom-alert"><b>Nota</b>: La importación desde las aplicaciones oficiales no es posible debido
+                a las restricciones
                 de acceso de Android.</p>
               <p>1. Habilita "Orígenes (o Fuentes) desconocidos" en la configuración Ajustes → Seguridad → Orígenes
                 desconcidos. Copia el archivo APK de Valkyrie en tu dispositivo.</p>
@@ -446,7 +447,8 @@
                 <li>Puedes ejecutar con <code>-import &lt;location&gt;</code> donde <code>&lt;location&gt;</code> son
                   los datos de Road to Legend o Mansions of Madness. Por ejemplo
                   <code>/home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend</code> para
-                  Road to Legend.</li>
+                  Road to Legend.
+                </li>
                 <li>Alternativamente puedes usar <b>Importar desde ZIP</b>: Permite importar desde un archivo zip
                   descargado. El archivo zip debe descargarse desde las URLs listadas en la <a
                     href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">Guía de Importación
