--- a/index-fr.html
+++ b/index-fr.html
@@ -370,20 +370,17 @@
                     href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">dépannage</a>
                   pour plus de détails.</b></p>.
               <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
-              <p>Install the official app using the Google Play Store:</p>
-              <ul>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
-                    target="_blank">Mansions Of Madness Second Edition</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
-                    target="_blank">Descent: Road to Legend</a></li>
-              </ul>
-              <p>1. Start the official app and wait until the loading is complete (the wait cursor inside the main menu
-                is gone).</p>
-              <p>2. Enable "Unknown Sources" under Settings → Security → Unknown Sources. Copy the Valkyrie APK file to
-                your device.</p>
-              <p>3. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie" in your
-                list of apps. </p>
-              <p>4. Run it. Allow all permissions the app requests.</p>
+              <p class="custom-alert"><b>Remarque</b> : L'importation depuis les applications officielles n'est pas
+                possible en raison des restrictions d'accès d'Android.</p>
+              <p>1. Activez "Sources inconnues" dans Paramètres → Sécurité → Sources inconnues. Copiez le fichier APK
+                Valkyrie sur votre appareil.</p>
+              <p>2. Exécutez l'APK Valkyrie pour installer. Après l'installation, vous trouverez une application nommée
+                "Valkyrie" dans votre liste d'applications.</p>
+              <p>3. Lancez-la. Autorisez toutes les permissions demandées par l'application.</p>
+              <p>4. Utilisez le bouton <b>Importer depuis ZIP</b> pour importer du contenu. Le fichier zip doit être
+                téléchargé à partir des URL indiquées dans le <a
+                  href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">Guide d'importation
+                  ZIP</a>.</p>
 
               <p>5. Vérifiez ensuite le <a
                   href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">manuel d'installation
@@ -454,7 +451,8 @@
                 <li>Vous pouvez soit exécuter avec <code>-import &lt;location&gt;</code> où
                   <code>&lt;location&gt;</code> est les données de Road to Legend ou Mansions of Madness. Par exemple
                   <code>/home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend</code> pour
-                  Road to Legend.</li>
+                  Road to Legend.
+                </li>
                 <li>Alternativement, vous pouvez utiliser <b>Importer depuis ZIP</b> : Permet d'importer à partir d'un
                   fichier zip téléchargé. Le fichier zip doit être téléchargé à partir des URL indiquées dans le <a
                     href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">Guide d'importation
