--- a/index-it.html
+++ b/index-it.html
@@ -365,23 +365,16 @@
                     href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a>
                   per i dettagli.</b></p>
               <p>Se avete già installato una versione di Valkyrie, disinstallatela prima.</p>
-              <p>Installate l'app ufficiale utilizzando il Google Play Store:</p>
-              <ul>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom"
-                    target="_blank">Mansions Of Madness Second Edition</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl"
-                    target="_blank">Descent: Road to Legend</a></li>
-              </ul>
-              <p>1. Avviare l'app ufficiale e attendere il completamento del caricamento (il cursore di attesa
-                all'interno del menu principale
-                è scomparso).</p>
-              <p>2. Abilitare "Sorgenti sconosciute" in Impostazioni → Sicurezza → Sorgenti sconosciute. Copiare il file
-                APK di Valkyrie all'indirizzo
-                del dispositivo.</p>
-              <p>3. Eseguire l'APK di Valkyrie per installarlo. Dopo l'installazione, si troverà un'app denominata
-                "Valkyrie" nell'elenco delle applicazioni di
-                . </p>
-              <p>4. Eseguirla. Consentire tutte le autorizzazioni richieste dall'applicazione.</p>
+              <p class="custom-alert"><b>Nota</b>: L'importazione dalle app ufficiali non è possibile a causa delle
+                restrizioni di accesso di Android.</p>
+              <p>1. Abilitare "Sorgenti sconosciute" in Impostazioni → Sicurezza → Sorgenti sconosciute. Copiare il file
+                APK di Valkyrie sul dispositivo.</p>
+              <p>2. Eseguire l'APK di Valkyrie per installare. Dopo l'installazione, troverai un'app chiamata "Valkyrie"
+                nella tua lista di app.</p>
+              <p>3. Eseguirla. Consentire tutte le autorizzazioni richieste dall'applicazione.</p>
+              <p>4. Utilizzare il pulsante <b>Importa da ZIP</b> per importare il contenuto. Il file zip deve essere
+                scaricato dagli URL elencati nella <a href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import"
+                  target="_blank">Guida all'importazione ZIP</a>.</p>
 
               <p>5. Quindi controllare il <a
                   href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">manuale di installazione
@@ -449,7 +442,8 @@
                 <li>Puoi eseguire con <code>-import &lt;location&gt;</code> dove <code>&lt;location&gt;</code> sono i
                   dati di Road to Legend o Mansions of Madness. Ad esempio
                   <code>/home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend</code> per
-                  Road to Legend.</li>
+                  Road to Legend.
+                </li>
                 <li>In alternativa puoi usare <b>Importa da ZIP</b>: Consente di importare da un file zip scaricato. Il
                   file zip deve essere scaricato dagli URL elencati nella <a
                     href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">Guida all'importazione
