--- a/index-pl.html
+++ b/index-pl.html
@@ -368,7 +368,8 @@
                     href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting#blackscreen-on-startup-android">troubleshooting</a>
                   po szczegóły.</b></p>
               <p>Jeśli posiadasz już zainstalowaną wcześniejszą wersję Valkyrie, najpierw ją odinstaluj.</p>
-              <p><b>Uwaga</b>: Import z oficjalnych aplikacji nie jest możliwy ze względu na ograniczenia dostępu
+              <p class="custom-alert"><b>Uwaga</b>: Import z oficjalnych aplikacji nie jest możliwy ze względu na
+                ograniczenia dostępu
                 systemu Android.</p>
               <p>1. Włącz zezwolenie na instalowanie aplikacji z nieznanych źródeł w menu Ustawienia → Bezpieczeństwo →
                 Nieznane Źródła. Skopiuj plik Valkyrie APK na swoje urządzenie.</p>
@@ -443,7 +444,8 @@
                 <li>Możesz uruchomić z <code>-import &lt;location&gt;</code> gdzie <code>&lt;location&gt;</code> to dane
                   Road to Legend lub Mansions of Madness. Na przykład
                   <code>/home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend</code> dla
-                  Road to Legend.</li>
+                  Road to Legend.
+                </li>
                 <li>Alternatywnie możesz użyć <b>Importuj z ZIP</b>: Pozwala na import z pobranego pliku ZIP. Plik ZIP
                   musi zostać pobrany z linków dostępnych w <a
                     href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">Przewodniku Importu
