--- a/index-pt.html
+++ b/index-pt.html
@@ -369,7 +369,8 @@
                   para detalhes.</b>
                 << /p>
                   <p>Se você já tem uma versão do Valkyrie instalada, por favor desinstale primeiro.</p>
-                  <p><b>Nota</b>: A importação de aplicativos oficiais não é possível devido a restrições de acesso do
+                  <p class="custom-alert"><b>Nota</b>: A importação de aplicativos oficiais não é possível devido a
+                    restrições de acesso do
                     Android.</p>
                   <p>1. Habilite "Unknown Sources" (Fontes desconhecidas) em Settings → Security → Unknown Sources
                     (Configurações → Segurança → Fontes Desconhecidas). Copie o APK do Valkyrie para seu dispositivo.
@@ -447,7 +448,8 @@
                 <li>Você pode rodar com <code>-import &lt;location&gt;</code> onde <code>&lt;location&gt;</code> são os
                   dados de Road to Legend ou Mansions of Madness. Por exemplo
                   <code>/home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend</code> para
-                  Road to Legend.</li>
+                  Road to Legend.
+                </li>
                 <li>Alternativamente você pode usar <b>Importar de ZIP</b>: Permite importar de um arquivo zip baixado.
                   O arquivo zip deve ser baixado das URLs listadas no <a
                     href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">ZIP Import Guide</a>.
