--- a/index.html
+++ b/index.html
@@ -364,7 +364,8 @@
             <div class="text-container">
               <h3>Android</h3>
               <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
-              <p><b>Note</b>: Import from the official apps is not possible due to Android access restrictions.</p>
+              <p class="custom-alert"><b>Note</b>: Import from the official apps is not possible due to Android access
+                restrictions.</p>
               <p>1. Enable "Unknown Sources" under Settings → Security → Unknown Sources. Copy the Valkyrie APK file to
                 your device.</p>
               <p>2. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie" in your
@@ -440,7 +441,8 @@
                 <li>You can either run with <code>-import &lt;location&gt;</code> where <code>&lt;location&gt;</code> is
                   Road to Legend or Mansions of Madness data. For example
                   <code>/home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend</code> for
-                  Road to Legend.</li>
+                  Road to Legend.
+                </li>
                 <li>Alternatively you can use <b>Import from ZIP</b>: Allows to import from a downloaded zip file. The
                   zip file needs to be downloaded from the URLs listed in the <a
                     href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">ZIP Import Guide</a>.
