Removed custom javascript libraries and replaced it with Vanialla javascript instead.

--- a/index-es.html
+++ b/index-es.html
@@ -26,8 +26,6 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
   <link href="web/css/bootstrap.css" rel="stylesheet">
   <link href="web/css/fontawesome-all.css" rel="stylesheet">
-  <link href="web/css/swiper.css" rel="stylesheet">
-  <link href="web/css/magnific-popup.css" rel="stylesheet">
   <link href="web/css/styles.css" rel="stylesheet">
 
   <!-- Favicon  -->
@@ -130,7 +128,7 @@
           <div class="col-lg-6">
             <div class="text-container">
               <h2>CREADOR DE ESCENARIOS/MISIONES PARA<br></h2>
-              <h3><span id="js-rotating">MANSIONES DE LA LOCURA, DESCENT</span></h3>
+              <h3>MANSIONES DE LA LOCURA & DESCENT</h3>
               <p class="p-large">Valkiria es una aplicación para los usuarios que construyeron escenarios/cuestiones
                 para los Juegos de Tablero de Vuelo de Fantasía.</p>
               <a class="btn-solid-lg page-scroll" href="#download-windows"><i class="fab fa-windows"></i>WINDOWS</a>
@@ -302,7 +300,8 @@
           <!-- Video Preview -->
           <div class="image-container">
             <div class="video-wrapper">
-              <a class="popup-youtube" href="https://www.youtube.com/watch?v=NGMZqCx6YoA" data-effect="fadeIn">
+              <a class="popup-youtube" href="https://www.youtube.com/watch?v=NGMZqCx6YoA" target="_blank"
+                rel="noopener noreferrer" data-effect="fadeIn">
                 <img class="img-fluid" src="web/images/thumb.png" alt="alternative">
                 <span class="video-play-button">
                   <span></span>
@@ -380,7 +379,8 @@
                 URLs listadas en la <a href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import" target="_blank">Guía
                   de Importación ZIP</a>.</p>
               <p>5. A continuación revisa el <a
-                  href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Manual de instalación de
+                  href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual" target="_blank">Manual de
+                  instalación de
                   Android</a>.</p>
 
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
@@ -526,16 +526,8 @@
   </div>
 
   <!-- Scripts -->
-  <script src="web/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-  <script src="web/js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
-  <script src="web/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-  <script src="web/js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
-  <script src="web/js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
-  <script src="web/js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
-  <script src="web/js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
-  <script src="web/js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
-  <script src="web/js/scripts.js"></script> <!-- Custom scripts -->
-  <script src="web/js/indexScripts.js"></script>
+  <!-- Scripts -->
+  <script src="web/js/vanilla-scripts.js" defer></script>
   <!-- additional scripts for this page (e.g. for generating download links) -->
 
 </body>
