--- a/index-de.html
+++ b/index-de.html
@@ -28,8 +28,6 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
   <link href="web/css/bootstrap.css" rel="stylesheet">
   <link href="web/css/fontawesome-all.css" rel="stylesheet">
-  <link href="web/css/swiper.css" rel="stylesheet">
-  <link href="web/css/magnific-popup.css" rel="stylesheet">
   <link href="web/css/styles.css" rel="stylesheet">
 
   <!-- Favicon  -->
@@ -132,7 +130,7 @@
           <div class="col-lg-6">
             <div class="text-container">
               <h2>Quest Editor für<br></h2>
-              <h3><span id="js-rotating">Villen des Wahnsinns, Descent</span></h3>
+              <h3>Villen des Wahnsinns & Descent</h3>
               <p class="p-large">Valkyrie ist eine App zur Erstellung von nutzergenerierten Inhalten für Fantasy Flight
                 Brettspiele.</p>
               <a class="btn-solid-lg page-scroll" href="#download-windows"><i class="fab fa-windows"></i>WINDOWS</a>
@@ -305,7 +303,8 @@
           <!-- Video Preview -->
           <div class="image-container">
             <div class="video-wrapper">
-              <a class="popup-youtube" href="https://www.youtube.com/watch?v=NGMZqCx6YoA" data-effect="fadeIn">
+              <a class="popup-youtube" href="https://www.youtube.com/watch?v=NGMZqCx6YoA" target="_blank"
+                rel="noopener noreferrer" data-effect="fadeIn">
                 <img class="img-fluid" src="web/images/thumb.png" alt="alternative">
                 <span class="video-play-button">
                   <span></span>
@@ -379,7 +378,8 @@
                 heruntergeladen werden, die im <a href="https://github.com/NPBruce/valkyrie/wiki/ZIP-Import"
                   target="_blank">ZIP Import Guide</a> aufgeführt sind.</p>
               <p>5. Bei Problemen sieh dir das <a
-                  href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual">Android-Installationshandbuch</a>
+                  href="https://github.com/NPBruce/valkyrie/wiki/Android-installation-manual"
+                  target="_blank">Android-Installationshandbuch</a>
                 an.</p>
               <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Neuste Valkyrie
                 Version herunterladen</a>
@@ -522,16 +522,8 @@
   </div>
 
   <!-- Scripts -->
-  <script src="web/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-  <script src="web/js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
-  <script src="web/js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-  <script src="web/js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
-  <script src="web/js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
-  <script src="web/js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
-  <script src="web/js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
-  <script src="web/js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
-  <script src="web/js/scripts.js"></script> <!-- Custom scripts -->
-  <script src="web/js/indexScripts.js"></script>
+  <!-- Scripts -->
+  <script src="web/js/vanilla-scripts.js" defer></script>
   <!-- additional scripts for this page (e.g. for generating download links) -->
 </body>
 
